# jupyter-notebooks

./: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
1_intro_to_python/: 1_intro_to_Python.html  1_intro_to_Python_solutions.html
2_making_decisions/: 2_making_decisions.html  2_making_decisions_solutions.html
_sources/: markdown-notebooks.ipynb
_sources/1_intro_to_python/: 1_intro_to_Python.ipynb
_static/: basic.css
mynotebook/: _config.yml  _toc.yml
mynotebook/2_making_decisions/: 2_making_decisions.ipynb
mynotebook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
mynotebook/_build/.doctrees/1_intro_to_python/: 1_intro_to_Python.doctree  1_intro_to_Python_solutions.doctree
mynotebook/_build/.doctrees/2_making_decisions/: 2_making_decisions.doctree  2_making_decisions_solutions.doctree
mynotebook/_build/html/: .buildinfo  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
mynotebook/_build/html/1_intro_to_python/: 1_intro_to_Python.html  1_intro_to_Python_solutions.html
mynotebook/_build/html/2_making_decisions/: 2_making_decisions.html  2_making_decisions_solutions.html
mynotebook/_build/jupyter_execute/: markdown-notebooks.ipynb
mynotebook/_build/jupyter_execute/1_intro_to_python/: 1_intro_to_Python.ipynb  1_intro_to_Python_solutions.ipynb
(+4 files in other folders)
